(library
 (name Dune_rely_demo_test_exe)
 (public_name dune-rely-demo.test-exe)
 (flags -open Base -linkall -g -w -9)
 ; Make the library optional to skip building test on Opam
 ; (optional)
 (libraries base rely.lib dune-rely-demo.lib)
 (modules
  (:standard \ test_runner)))

(executable
 (name test_runner)
 (public_name test-runner.exe)
 (modules test_runner)
 (libraries base dune-rely-demo.test-exe)
 (flags -open Base))

(include_subdirs unqualified)
